devops/k8s/webhook/validatingwebhookconfig.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMzVENDQWNXZ0F3SUJBZ0lRRlZPWHRtWDAvWXJOWG9IMy9jbktoVEFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJd01EY3lNVEV5TlRBek9Wb1hEVE13TURjeApPVEV5TlRBek9Wb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNK1NzQitNSWRTODNCME1qS2g0YnM1azBGRXFhMFY5WW5IbjlEbUQKb1grL3NXWEdoTFZlS1JIK2l5a1JTOFBzWXJvV2c4aVZ2NG1aSm5CZWlLdXFMbzZFd2Y1akJCSTUzMkhIL3lNUApDOHdmRHUyeWlvSC [...]
    service:
      name: validating-webhook-svc
      namespace: default
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: validation.istio.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - '*'
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - 'deployment'
    - 'pods'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: validating-webhook-svc
  namespace: default
spec:
  ports:
  - name: validating-webhook
    port: 443
    protocol: TCP
  sessionAffinity: None
  type: ClusterIP
